0.12.0b3
========

Changes
-------

- Add log-level helpers
- Include that flowfile.py is located on in the workflow context.
- Use var name to reference workflow from CLI.
- Fetch version from package info.


0.12.0b1
========

Changes
-------

- Added tracing support to aid in debugging workflows.
- Add flowfile.py support for execution of workflows in a repository.


0.11.0
======

Changes
-------

- Format output of Workflow name to format from the context.
- Added a skip_step function, that allows a step to be skipped. This is based
  off an exception that is handled by the Step class wrapping the function.


0.10.0
======

Changes
-------

- Support pyApp constructs


0.9.0
=====

Changes
-------

- Define a `Node` protocol
- `CaptureErrors` node can now specify specific exception types
- Early version of parallel nodes (using multiprocessing), this version has some
  caveats relating to what can be passed into a parallel execution.


0.8.0
=====

Changes
-------

- `WorkflowContext.state` variables can now be accessed as attributes
- Add `Navigable` ABC to all workflow items to aid in documentation

Sphinx Extension
----------------

- Workflow documentor can now generate the workflow node tree


0.7.0
=====

Changes
-------

- `SetVar` can be passed a callable that accepts a context

Sphinx Extension
----------------

- Step autodoc will now:

  - Add ``noname`` option to stop name being included in step and workflow
  - Hide input section if there are no inputs
  - Hide output section if there are no outputs
  - Only pluralise output if there are multiple outputs


0.6.0
=====

This release brings the library rapidly toward a 1.0 release solidifying the API
and approach to the API design.


Breaking Changes
----------------

- Simplified API and removed most snake case aliases, removed aliases from
  Workflow object.
- Removed init arguments from all Nodes in favour of fluent style methods.

Changes
-------
