@@ -1,6 +1,11 @@
 0.12.0b3
 ========
 
+Additions
+---------
+
+- Add TryUntil node for trying multiple nodes until one succeeds.
+
 Changes
 -------
 
